# scrapy-puppeteer

./: .travis.yml  LICENCE  Pipfile  README.md  setup.cfg  setup.py
requirements/: requirements-test.txt  requirements.txt
scrapy_puppeteer/: __init__.py  cli.py  http.py  middlewares.py
tests/: test_middlewares.py
