[metadata]
name = scrapy-puppeteer
version = 0.0.4
url = https://github.com/clemfromspace/scrapy-puppeteer
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with puppeteer
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
